fix(inventory): reverse migrated header-only facts safely